[gd_scene load_steps=6 format=2]

[ext_resource path="res://Akadaly.gd" type="Script" id=1]
[ext_resource path="res://rajzok/szikla1.png" type="Texture" id=2]
[ext_resource path="res://rajzok/szikla_le1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 122.787 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 70 )

[node name="Akadaly" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="Felso" type="Sprite" parent="."]
position = Vector2( 0, -65 )
texture = ExtResource( 3 )
centered = false

[node name="FelsoUtkozo" type="CollisionShape2D" parent="."]
position = Vector2( 50.8419, 50.355 )
rotation = -0.244346
shape = SubResource( 1 )

[node name="Also" type="Sprite" parent="."]
position = Vector2( 0, 340 )
texture = ExtResource( 2 )
centered = false

[node name="AlsoUtkozo" type="CollisionShape2D" parent="."]
position = Vector2( 50, 464 )
rotation = 0.261799
shape = SubResource( 1 )

[node name="PontNovelo" type="Area2D" parent="."]
position = Vector2( 60, 260 )
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PontNovelo"]
shape = SubResource( 2 )
